Enhance GitHub Actions workflow conditions for deployment and output handling
- Updated deployment job conditions to allow triggering on pull requests with 'deploy' label.
- Improved output handling by ensuring proper variable assignment in the GitHub Actions workflow.

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -19,7 +19,7 @@ jobs:
   initialize:
     name: Initialize
     runs-on: ubuntu-latest
-    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.draft == false || (github.event.action == 'labeled' && contains(github.event.pull_request.labels.*.name, 'test')) }}
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.draft == false || (github.event.action == 'labeled' && (contains(github.event.pull_request.labels.*.name, 'test') || contains(github.event.pull_request.labels.*.name, 'deploy'))) }}
     permissions:
       actions: write
       contents: read
@@ -42,7 +42,7 @@ jobs:
         run: |
           latest_release=$(./tooling/scripts/get_latest_release.sh)
           echo "Latest release is $latest_release"
-          echo "result=$latest_release" >> $GITHUB_OUTPUT
+          echo "result=$latest_release" >> "$GITHUB_OUTPUT"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -56,7 +56,7 @@ jobs:
           matrixStringifiedObject="$(echo "${{ steps.files.outputs.all_changed_files }}" | sed -E 's/ /\n/g' | node ./tooling/scripts/generate_matrix.js)"
           echo "## Matrix Object"
           echo "$matrixStringifiedObject"
-          echo "matrix=$matrixStringifiedObject" >> $GITHUB_OUTPUT
+          echo "matrix=$matrixStringifiedObject" >> "$GITHUB_OUTPUT"
 
     outputs:
       matrix: ${{ steps.matrix.outputs.matrix }}
@@ -169,7 +169,12 @@ jobs:
     name: Deploy to Testing
     needs: [initialize, unit-tests, feature-tests]
     environment: testing
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && fromJson(needs.initialize.outputs.matrix).include[0] != null }}
+    if: |
+      fromJson(needs.initialize.outputs.matrix).include[0] != null &&
+      (
+        (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+        (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy'))
+      )
     strategy:
       matrix: ${{ fromJson(needs.initialize.outputs.matrix) }}
     runs-on: ubuntu-latest
