chore: update PR initialization conditions in GitHub Actions workflow
- Enhanced the condition for the 'initialize' job to account for the 'labeled' action, allowing initialization when a pull request is labeled with 'test' or 'deploy', while maintaining clarity and reducing unnecessary checks.

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -19,7 +19,10 @@ jobs:
   initialize:
     name: Initialize
     runs-on: ubuntu-latest
-    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.draft == false || ((contains(github.event.pull_request.labels.*.name, 'test') || contains(github.event.pull_request.labels.*.name, 'deploy'))) }}
+    if: |
+      github.event_name != 'pull_request' ||
+      (github.event.pull_request.draft == false && github.event.action != 'labeled') ||
+      (github.event.action == 'labeled' && (github.event.label.name == 'test' || github.event.label.name == 'deploy'))
     permissions:
       actions: write
       contents: read
