--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "description": "Trunk-based workflow practice repository",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VirdocsSoftware/trunk-practice.git"
   },
   "author": "Verba Engineering",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "jest": "^30.2.0"
+  }
 }
