ci: 🎡 run prod deployments after unit and feature testing

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -209,7 +209,7 @@ jobs:
 
   deploy-to-production:
     name: Deploy to Production
-    needs: [initialize]
+    needs: [initialize, unit-tests, feature-tests]
     environment: production
     env:
       RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
