--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -9,7 +9,7 @@ on:
       - main
     types: [opened, synchronize, reopened, labeled, ready_for_review]
   release:
-    types: [published]
+    types: [published, prereleased]
 
 env:
   NODE_VERSION: 22.x
@@ -207,13 +207,57 @@ jobs:
             echo "No package.json found at root, skipping..."
           fi
 
+  deploy-to-staging:
+    name: Deploy to Staging
+    needs: [initialize, unit-tests, feature-tests]
+    environment: staging
+    env:
+      RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
+    if: github.event_name == 'release' && github.event.release.prerelease == true && startsWith(github.ref, 'refs/tags/') && fromJson(needs.initialize.outputs.matrix).include[0] != null
+    strategy:
+      matrix: ${{ fromJson(needs.initialize.outputs.matrix) }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      # ============================================================
+      # Project-specific deploy actions
+      # Add a new step for each project that has custom deploy:
+      #
+      # - uses: ./project/my-project/.github/actions/deploy
+      #   if: ${{ matrix.project == 'my-project' }}
+      # ============================================================
+      - uses: ./project/sample-calculator/.github/actions/deploy
+        if: ${{ matrix.project == 'sample-calculator' && hashFiles('project/sample-calculator/.github/actions/deploy/action.yml') != '' }}
+
+      - name: Run Root Deploy Staging
+        if: ${{ matrix.project == '.' }}
+        run: |
+          if [ -f "package.json" ]; then
+            npm install
+            if [ "$(jq -r '.scripts["deploy:staging"]' package.json)" != "null" ]; then
+              npm run deploy:staging
+            else
+              echo "No deploy:staging script found in package.json, skipping..."
+            fi
+          else
+            echo "No package.json found at root, skipping..."
+          fi
+
   deploy-to-production:
     name: Deploy to Production
     needs: [initialize, unit-tests, feature-tests]
     environment: production
     env:
       RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
-    if: ${{ github.event_name == 'release' && startsWith(github.ref, 'refs/tags/') && fromJson(needs.initialize.outputs.matrix).include[0] != null }}
+    if: github.event_name == 'release' && github.event.release.prerelease == false && startsWith(github.ref, 'refs/tags/') && fromJson(needs.initialize.outputs.matrix).include[0] != null
     strategy:
       matrix: ${{ fromJson(needs.initialize.outputs.matrix) }}
     runs-on: ubuntu-latest
