chore: comment out dependencies in production approval job
- Commented out the 'needs' dependencies in the 'request-production-approval' job of the GitHub Actions workflow to simplify the execution flow for specific scenarios.

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -253,7 +253,7 @@ jobs:
 
   request-production-approval:
     name: Request Production Approval
-    needs: [initialize, unit-tests, feature-tests]
+    # needs: [initialize, unit-tests, feature-tests]
     runs-on: ubuntu-latest
     # Only run for full releases (not pre-releases)
     if: github.event_name == 'release' && github.event.release.prerelease == false && fromJson(needs.initialize.outputs.matrix).include[0] != null
