chore: comment out condition in production approval job
- Commented out the condition in the 'request-production-approval' job of the GitHub Actions workflow to simplify the execution flow for specific scenarios.

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -256,7 +256,7 @@ jobs:
     # needs: [initialize, unit-tests, feature-tests]
     runs-on: ubuntu-latest
     # Only run for full releases (not pre-releases)
-    if: github.event_name == 'release' && github.event.release.prerelease == false && fromJson(needs.initialize.outputs.matrix).include[0] != null
+    # if: github.event_name == 'release' && github.event.release.prerelease == false && fromJson(needs.initialize.outputs.matrix).include[0] != null
     steps:
       - name: Slack Approval
         uses: TigerWest/slack-approval@v1.1.0
