--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -253,10 +253,10 @@ jobs:
 
   request-production-approval:
     name: Request Production Approval
-    # needs: [initialize, unit-tests, feature-tests]
+    needs: [initialize, unit-tests, feature-tests]
     runs-on: ubuntu-latest
     # Only run for full releases (not pre-releases)
-    # if: github.event_name == 'release' && github.event.release.prerelease == false && fromJson(needs.initialize.outputs.matrix).include[0] != null
+    if: github.event_name == 'release' && github.event.release.prerelease == false && fromJson(needs.initialize.outputs.matrix).include[0] != null
     steps:
       - name: Slack Approval
         uses: TigerWest/slack-approval@v1.1.0
